--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-python-multipart==0.0.9
-
 fastapi==0.115.0
 uvicorn==0.32.0
 sqlmodel==0.0.22
-passlib[bcrypt]==1.7.4
+passlib==1.7.4
+bcrypt==4.0.1
 python-jose==3.3.0
 pydantic==2.9.0
 requests==2.32.3
+python-multipart==0.0.9
